Fixed command with new bind system